--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h5 { font-size: 16px; }
 .txt-regular { font-weight: 400; }
 .txt-bold { font-weight: 700; }
 .txt-uppercase { text-transform: uppercase; }
+.white { color:white}
 
 blockquote {
 	font-family: Georgia, serif;
@@ -438,7 +439,7 @@ h1 a.navbar-brand {
 =========================== */
 
 section.featured {
-	padding: 200px 0 60px;
+	padding: 120px 0 60px;
 	background: #70B9B0;
 	color: #fdfdfd;
 }
